# aws-serverless-ml-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: deploy.yml
app/: app_main.py  data_selector.py  logger_setup.py  streamlit_ui.py
infrastructure/: README.md  deploy.sh  mlflow_lambda.py  parameters.json  template.yaml
scripts/: sample_for_labeling.py
src/: export_onnx.py
tests/: cloud_test.py  test_lambda.py
