[project]
name = "aws-serverless-ml-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladyslav Pleshko",email = "vldsv.pl1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (==2.2.2)",
    "torchvision (>=0.17.0, <0.21.0)",
    "opencv-python (==4.9.0.80)",
    "numpy (<2)",
    "transformers (>=4.44.0, <5.0.0)",
    "onnx (<1.20.0)",
    "onnxruntime (<1.20.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "mangum (>=0.21.0,<0.22.0)",
    "wandb (>=0.25.1,<0.26.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pytest (>=9.0.2,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "boto3 (>=1.42.83,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "streamlit (>=1.28.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
